// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`removeHashPassword should remove only hash password in user 1`] = `
Object {
  "_id": Any<ObjectId>,
  "active": false,
  "agentType": "CENTRAL_ADMIN",
  "email": "test22@beta.gouv.fr",
  "jobType": Array [],
  "jwt": Object {
    "expirateDate": 2023-09-26T13:50:34.945Z,
    "token": "TOKEN",
  },
  "profileToComplete": false,
  "roles": Array [
    "user",
  ],
  "signupAt": Any<Date>,
}
`;

exports[`removeSecrets should remove all secret in user 1`] = `
Object {
  "_id": Any<ObjectId>,
  "active": false,
  "agentType": "CENTRAL_ADMIN",
  "email": "test22@beta.gouv.fr",
  "jobType": Array [],
  "profileToComplete": false,
  "roles": Array [
    "user",
  ],
  "signupAt": Any<Date>,
}
`;
